--- a/felayout_t3kit/dev/styles/main/contentElements/socialIcons.less
+++ b/felayout_t3kit/dev/styles/main/contentElements/socialIcons.less
@@ -68,7 +68,7 @@
 @media (min-width: @screen-sm-min) {
     .header-middle__social-icon .social-icons {
         float: right;
-        width: 60%;
+        width: auto;
         text-align: right;
         padding: 0 10px 0 0;
         height: @header-middle-height;
